# Warehouse-Optimization

./: .gitignore  IDENTITY.md  LEGACY_OPENCLAW_IMPORT.md  MEMORY.md  Makefile  README.md  USER.md  pyproject.toml  warehouse-system-architecture-proposal.md
docs/: erpnext-integration-plan.md  erpnext-mapping-notes.md  first-gymnasium-environment-spec.md  forklift-tracker-data-model.md  generated-task-demo.md  implementation-plan.md  layout-environment-demo.md  order-driven-task-generation.md  powerbi-dashboard-spec.md  process-documentation.md  product-requirements.md  project-outline.md  route-rl-layer.md  streamlit-to-gymnasium-environment-plan.md  tech-stack.md  technical-architecture.md  warehouse-event-data-dictionary.md  warehouse-event-schema-mvp.md  warehouse-layout-configurator-spec.md  warehouse-mvp-build-plan.md  wms-research.md
docs/google-knowledge-base/: README.md  warehouse-optimization-data-ingestion-and-normalization-plan.md  warehouse-optimization-product-requirements-document.md  warehouse-optimization-project-outline.md  warehouse-optimization-prompt-engineering.md  warehouse-optimization-technical-architecture.md
examples/sample_data/: GR FL Tracker Units Case Study D.csv  README.md  gr-fl-v3-0033.csv  gr-fl-v3-0033_STATE.csv
memory/: 2026-03-19.md  2026-03-24.md
tests/: test_erpnext_adapter.py  test_models.py  test_telemetry_derived.py  test_telemetry_io.py  test_telemetry_parser.py
warehouse_mvp/: README-streamlit.md  README.md  pyproject.toml  requirements-gym.txt  requirements-rl.txt  streamlit_app.py
warehouse_mvp/tests/: test_kpi.py  (+9 more)
(+70 files in other folders)
